# ml_cross_validator

./: CMakeLists.txt  README.md
cmakemodules/: Finddimentional_minimization.cmake  Findgenetic_algorithm.cmake  Findmatrix_core.cmake  Findmultidimensional.cmake  Findvector_core.cmake  add_source_groups.cmake  filter_sources.cmake  group_files.cmake  group_files_recursive.cmake  group_files_recursive.txt  standard_modules.cmake
python/: build_graphics.py  graphics_holder.py
src/: .data_storage_maximus.cpp.swp  .weak_predictor.cpp.swp  activation_function.h  ada_boost.cpp  ada_boost.h  cart.cpp  cart.h  common_vector.h  common_vector_initializer.h  data.cpp  data.h  data_maxim.cpp  data_maxim.h  data_storage.cpp  data_storage.h  data_storage_maximus.cpp  data_storage_maximus.h  dense_vector.h  functional.h  instance.cpp  instance.h  k_fold_cross_validation.cpp  k_fold_cross_validation.h  k_nearest_neighbours.cpp  k_nearest_neighbours.h  logistic_regression.cpp  logistic_regression.h  loss_function_approximation.h  main.cpp  math_vector.h  math_vector_applier.h  math_vector_distance.h  math_vector_iterator.h  math_vector_norm.h  mathmatrix.h  mathmatrix_decomposer.h  mathmatrix_invertor.h  mathmatrix_solver.h  mathvector.h  mathvector_norm.h  (+13 more)
